--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-matplot = "*"
 numpy = "*"
 opencv-python = "*"
 bluerobotics-navigator = "*"
+matplotlib = "*"
 
 [dev-packages]
 
