--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,9 @@ name = "pypi"
 
 [packages]
 numpy = "*"
-matplotlib = "*"
+matpltotlib = "*"
 opencv-python = "*"
+bluerobotics-navigator = "*"
 
 [dev-packages]
 
